# GODSendEXE

GODSend/: CMakeLists.txt  Compile Logic+Commands.txt  godsend_installer.cpp  godsend_installer.manifest  godsend_installer.rc  godsend_installer.res  setup-vs.ps1
